--- a/package.json
+++ b/package.json
@@ -9,15 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.6",
     "@next/font": "13.0.7",
+    "@tailwindcss/forms": "^0.5.3",
     "@types/node": "18.11.15",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
+    "embla-carousel-autoplay": "^7.0.5",
+    "embla-carousel-react": "^7.0.5",
     "eslint": "8.29.0",
     "eslint-config-next": "13.0.7",
+    "framer-motion": "^7.10.1",
     "next": "13.0.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "swiper": "^8.4.5",
     "typescript": "4.9.4"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.20",
+    "tailwindcss": "^3.2.4"
   }
 }
