--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "@headlessui/react": "^1.7.6",
     "@next/font": "13.0.7",
+    "@react-spring/web": "^9.6.1",
     "@tailwindcss/forms": "^0.5.3",
     "@types/node": "18.11.15",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
+    "@use-gesture/react": "^10.2.23",
     "embla-carousel-autoplay": "^7.0.5",
     "embla-carousel-react": "^7.0.5",
     "eslint": "8.29.0",
@@ -23,6 +25,7 @@
     "next": "13.0.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-spring": "^9.6.1",
     "swiper": "^8.4.5",
     "typescript": "4.9.4"
   },
