--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint-config-next": "13.0.7",
     "framer-motion": "^7.10.1",
     "next": "13.0.7",
+    "next-pwa": "^5.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-spring": "^9.6.1",
